DISCO-2841 Fix z-index of progress bar

--- a/angular/src/app/discovery/beacon/beacon-search.component.scss
+++ b/angular/src/app/discovery/beacon/beacon-search.component.scss
@@ -45,6 +45,7 @@ ddap-beacon-search-result-table {
 
 .search-progress-backdrop {
   position: absolute;
+  z-index: 1000;
   top: 0;
   right: 0;
   bottom: 0;
